# SD-CDM

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
data/: README.md
docs/: project_structure.md  reproducibility.md
legacy/: SD_CDM_original.py
scripts/: generate_dummy_data.py  prepare_data.py  run_default.sh
src/sd_cdm/: __init__.py  data.py  evaluate.py  model.py  train.py  utils.py
tests/: test_model_forward.py
