[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sd-cdm"
version = "0.1.0"
description = "Strategy-Aware Dual-Channel Cognitive Diagnosis Model"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  {name = "Yu Lu", email = "1375976002ly@gmail.com"}
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "PyYAML>=6.0",
  "scikit-learn>=1.3",
  "torch>=2.0",
  "tqdm>=4.66"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
